# crude

./: README.md  setup.cfg
crude/: __init__.py  base.py  util.py
crude/ca/: chris_playground.py  chris_playground_2.py  chris_playground_3.py  chris_playground_4.py  run_both.py  selenium_chris_playground.py
crude/examples/buildup/: buildup_utils.py  take_04_model_run.py  take_05_model_run.py  take_06_model_run.py
crude/extrude_crude/: extrude_crude_util.py  sandbox.py  take_01_salary.py  take_03_salary.py  take_04_model_run.py  take_05_model_run.py  take_06_model_run.py  take_07_model_run.py  take_08_model_pipe.py  take_09_model_pipe.py
crude/sb/: flat_dispatch_app_5.py  flat_dispatch_app_clear_button.py  py2pydantic.py  py2pydanticapp.py  pydantic_wrap.py  take_09_rewrite.py
crude/tests/: test_take_01_salary.py
docsrc/: index.rst
