[metadata]
name = crude
version = 0.0.2
url = https://github.com/i2mint/crude
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Control complex python object through basic types
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = crude

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	i2
	dol

